Wed Aug 26 18:09:52 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/RakeResults_T.cpp:

          Fixed various GCC warnings.

        * tests/DCPS/unit/MyTypeSupportImpl.h:

          Fixed compiler failure resulting from bad test harness.

Wed Aug 26 00:02:48 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/DcpsIntegration/infrastructure.cpp:

          Fixed inconsistent qos issue from set_default_publisher_qos()
          and set_default_subscriber_qos() calls.

Tue Aug 25 23:14:53 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/Qos_Helper.inl:

          Added support for TIME_BASED_FILTER.
          - Refactored data filtering. data_expired has been renamed
            to filter_sample and a new filter_instance method has been
            added.

Tue Aug 25 21:38:02 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          - According to spec 1.2, Samples that contain no data do not
            count towards the limits imposed by the RESOURCE_LIMITS QoS policy
            so the oldest sample is not removed to impose the resource limit
            requirement when unregister/dispose message arrives.
          - This fixed access violation when trying to add dispose sample
            to instance after instance is released during removing last
            sample.
          - Made DataReader ignore the unregister/dispose message when it does
            not cause state change. This resolved the issue of duplicate
            notifications for unregister or dispose event.

        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.h:

          Made dispose_was_received, unregister_was_received  return a bool value
          to indicate whether it causes instance state change. If it does, the